tests/testfiles/passing/invalid_identifiers/keyword_as_id_return.c
/* Keyword as identifier: return */
int main() {
    int return;
}